@@ -122,6 +122,15 @@
                                 -cp $( cat /app/jib-classpath-file ) \
                                 $( cat /app/jib-main-class-file )
                             </arg>
+
+                            <!--<arg>
+                                exec java $JAVA_OPTS \
+                                -server -Dfile.encoding=UTF-8 -Djava.security.egd=file:/dev/./urandom \
+                                -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps \
+                                -Xloggc:/var/log/gc.log \
+                                -cp /app/resources:/app/classes:/app/libs/* \
+                                ${main-class}
+                            </arg>-->
                         </entrypoint>
                     </container>
                 </configuration>
